refactor: nova section info dos artigos

--- a/index.html
+++ b/index.html
@@ -61,27 +61,60 @@
             <img src="img/banner_inclusao_digital(1920x1220).png" alt="">
         </section>
 
-        <section class="containers info" id="info">
-            <div class="info-content">
-                <div class="info-image">
-                    <img id="info-img" src="img/sobre_projeto.png" alt="Imagem ilustrativa">
-                </div>
-                <div class="info-text">
-                    <div class="info-card active" id="sobre_projeto">
-                        <h3>O Projeto</h3>
-                        <p>O projeto “Aplicabilidade de Ferramentas Digitais”, desenvolvido por estudantes da ETEPAC em parceria com o COMPAZ Miguel Arraes, levou conhecimento e inclusão digital a jovens e adultos da comunidade. A iniciativa uniu diferentes cursos técnicos e resultou em aprendizados transformadores — para os participantes e para os bolsistas. <n> Quer saber como a tecnologia mudou realidades? <a href="pages/info_projeto.html">Clique aqui</a>.</p>
+        <section class="containers artigos-relacionados-section">
+            <div class="titulos_containers">
+                <h2>Iniciativa que conecta <span>pessoas, ideias e futuro</span><br> conheça as histórias por trás dos nossos projetos:</h2>
+            </div>
+
+            <div class="artigos-relacionados-container">
+
+                <a href="pages/info_projeto.html">
+                    <div class="artigo-relacionado-item">
+                        <img src="img/sobre_parceria.png" alt="Imagem artigo 1" class="artigo-relacionado-img">
+                        <div class="artigo-relacionado-conteudo">
+                            <span class="artigo-relacionado-tag">Projeto</span>
+                            <h3 class="artigo-relacionado-subtitulo">O projeto que brilhou</h3>
+                            <div class="artigo-relacionado-info">
+                            <span>24/10/2025</span>
+                            <span><i class="bi bi-stopwatch"></i> 5 minutos de leitura</span>
+                            </div>
+                            <button class="artigo-relacionado-link">Ler artigo completo →</button>
+                        </div>
                     </div>
-                    <div class="info-card" id="sobre_parceria">
-                        <h3>Parceria</h3>
-                        <p>Nove bolsistas de diferentes áreas uniram talentos e saberes no COMPAZ Miguel Arraes para promover o letramento digital, a inteligência artificial e a internet das coisas. Com empatia, criatividade e trabalho em equipe, enfrentaram desafios e conquistaram resultados reais na formação dos alunos.<n>Descubra como essa diversidade fez a diferença. <a href="pages/info_parceria.html">Clique aqui</a>.</p>
+                </a>
+
+                <a href="pages/info_parceria.html">
+                    <div class="artigo-relacionado-item">
+                        <img src="img/sobre_parceria.png" alt="Imagem artigo 2" class="artigo-relacionado-img">
+                        <div class="artigo-relacionado-conteudo">
+                            <span class="artigo-relacionado-tag">Parceria</span>
+                            <h3 class="artigo-relacionado-subtitulo">ETEPAC e COMPAZ: uma união estratégica e eficaz</h3>
+                            <div class="artigo-relacionado-info">
+                            <span>24/10/2025</span>
+                            <span><i class="bi bi-stopwatch"></i> 3 minutos de leitura</span>
+                            </div>
+                            <button class="artigo-relacionado-link">Ler artigo completo →</button>
+                        </div>
                     </div>
-                    <div class="info-card" id="sobre_bolsistas">
-                        <h3>Bolsistas</h3>
-                        <p>A união entre a ETEPAC e o COMPAZ mostrou o poder da colaboração entre instituições comprometidas com a transformação social. A parceria levou inovação, aprendizado prático e oportunidades para quem busca crescer através da educação.<n>Conheça mais sobre essa parceria inspiradora. <a href="pages/info_bolsistas.html">Clique aqui</a>.</p>
+                </a>
+
+                <a href="pages/info_bolsistas.html">
+                    <div class="artigo-relacionado-item">
+                        <img src="img/sobre_parceria.png" alt="Imagem artigo 3" class="artigo-relacionado-img">
+                        <div class="artigo-relacionado-conteudo">
+                            <span class="artigo-relacionado-tag">Bolsistas</span>
+                            <h3 class="artigo-relacionado-subtitulo">Impacto e inovação: a força interdisciplinar dos bolsistas</h3>
+                            <div class="artigo-relacionado-info">
+                            <span>24/10/2025</span>
+                            <span><i class="bi bi-stopwatch"></i> 3 minutos de leitura</span>
+                            </div>
+                            <button class="artigo-relacionado-link">Ler artigo completo →</button>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
+
 
         <section class="containers container" id="projeto">
             <div class="background-box">
@@ -112,11 +145,11 @@
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quibusdam a deleniti, impedit asperiores quos, quod ex mollitia ipsum hic doloremque recusandae doloribus, nesciunt harum provident reiciendis animi non totam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, sapiente consectetur voluptate, libero aliquid autem distinctio aliquam sit, obcaecati nam commodi reprehenderit. Eum laboriosam ratione, aperiam deleniti possimus deserunt doloribus.
                     </p>
                     <div class="box-buttons">
-                        <a href="utils/pdfs/apostila_inclusao_digital.pdf" download="apostila_inclusao_digital.pdf" class="btn btn1">
-                            Apostila <i class="bi bi-download"></i>
-                        </a>
-                        <a href="utils/pdfs/conteudos.pdf" download="conteudos.pdf" class="btn btn2">Conteúdos <i class="bi bi-download"></i></a>
-                        <a href="utils/pdfs/relatorios.pdf" download="relatorios.pdf" class="btn btn3">Relatórios <i class="bi bi-download"></i></a>
+                        <a href="pages/relatorio.html" class="btn btn3">Relatório</a>
+                        
+                        <a href="utils/pdfs/conteudos.pdf" class="btn btn2">Música <i class="bi bi-play"></i></a>
+
+                        <a href="utils/pdfs/apostila_inclusao_digital.pdf" download="apostila_inclusao_digital.pdf" class="btn btn1">Apostila <i class="bi bi-download"></i></a>
                     </div>
                 </div>
             </div>
@@ -137,7 +170,7 @@
 
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/sonia-p%C3%A1dua-71400134/" target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
-                        <a href="http://lattes.cnpq.br/5705552727941447" target="_blank" class="btn-sociais"><i class="bi bi-file-earmark-text-fill"></i></a>
+                        <a href="http://lattes.cnpq.br/5705552727941447" target="_blank" class="btn-sociais"><i class="bi bi-postcard"></i></a>
                     </div>
                 </div>
                 <img src="img/sonia.png" alt="" class="professor-img"/>
@@ -153,9 +186,9 @@
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/fagner-pontes-63242a257" target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
 
-                        <a href="http://lattes.cnpq.br/4827824373494382" target="_blank" class="btn-sociais"><i class="bi bi-file-earmark-text-fill"></i></a>
-
                         <a href="https://github.com/FagnerPontes" target="_blank" class="btn-sociais"><i class="bi bi-github"></i></a>
+
+                        <a href="http://lattes.cnpq.br/4827824373494382" target="_blank" class="btn-sociais"><i class="bi bi-postcard"></i></a>
                     </div>
                 </div>
                 <img src="img/fagner.png" alt="" class="professor-img"/>                
@@ -279,7 +312,7 @@
             </div>
         </section>
 
-                <!-- Modal (overlay) -->
+        <!-- Modal (overlay) -->
         <div id="modal-bolsista" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
