feat: link para musica

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="box-buttons">
                         <a href="pages/relatorio.html" class="btn btn3">Relatório</a>
                         
-                        <a href="utils/pdfs/conteudos.pdf" class="btn btn2">Música <i class="bi bi-play"></i></a>
+                        <a href="https://youtu.be/FYERV1m3R5Q?si=sObyIsx1rlJfUTS2" class="btn btn2">Música <i class="bi bi-play"></i></a>
 
                         <a href="utils/pdfs/apostila_inclusao_digital.pdf" download="apostila_inclusao_digital.pdf" class="btn btn1">Apostila <i class="bi bi-download"></i></a>
                     </div>
