refactor: new arrow

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <span>24/10/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 5 minutos de leitura</span>
                             </div>
-                            <button class="artigo-relacionado-link">Ler artigo completo →</button>
+                            <button class="artigo-relacionado-link">Ler artigo completo »</button>
                         </div>
                     </div>
                 </a>
@@ -93,7 +93,7 @@
                             <span>24/10/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 3 minutos de leitura</span>
                             </div>
-                            <button class="artigo-relacionado-link">Ler artigo completo →</button>
+                            <button class="artigo-relacionado-link">Ler artigo completo »</button>
                         </div>
                     </div>
                 </a>
@@ -108,7 +108,7 @@
                             <span>24/10/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 3 minutos de leitura</span>
                             </div>
-                            <button class="artigo-relacionado-link">Ler artigo completo →</button>
+                            <button class="artigo-relacionado-link">Ler artigo completo »</button>
                         </div>
                     </div>
                 </a>
