--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Inclusão Digital - COMPAZ</title>
+    <title>Inclusão digital - home</title>
 </head>
 
 <body>
-        <!-- cabeçalho com logo, menu de navegação e botão de entrar -->
+        <!-- cabeçalho com logo e menu de navegação -->
     <header class="header" id="header">
         <div class="box-header">
 
@@ -21,7 +21,7 @@
 
                 <nav>
                     <ul>
-                        <li><a href="#info">INFO</a></li>
+                        <li><a href="#artigos">ARTIGOS</a></li>
                         <li><a href="#projeto">PROJETO</a></li>
                         <li><a href="#professores">PROFESSORES</a></li>
                         <li><a href="#bolsistas">BOLSISTAS</a></li>
@@ -41,7 +41,7 @@
 
             <div class="mobile-menu">
                 <ul>
-                    <li><a class="item-mobile" href="#info">INFO</a></li>
+                    <li><a class="item-mobile" href="#artigos">ARTIGOS</a></li>
                     <li><a class="item-mobile" href="#projeto">PROJETO</a></li>
                     <li><a class="item-mobile" href="#professores">PROFESSORES</a></li>
                     <li><a class="item-mobile" href="#bolsistas">BOLSISTAS</a></li>
@@ -56,19 +56,19 @@
         <section class="banner">
             <div class="text-banner">
                 <h1>Projeto <span>Inclusão Digital</span></h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae, maiores. Harum soluta fugiat doloremque sequi quos consequaturç</p>
+                <p>Aplicabilidade de ferramentas digitas, promovendo a inovação e as habilidades tecnológicas aos usuários da biblioteca do Compaz Miguel Arraes, pelos estudantes da ETEPAC</p>
             </div>
             <img src="img/banner_inclusao_digital(1920x1220).png" alt="">
         </section>
 
-        <section class="containers artigos-relacionados-section">
+        <section class="containers artigos-relacionados-section" id="artigos">
             <div class="titulos_containers">
                 <h2>Iniciativa que conecta <span>pessoas, ideias e futuro</span><br> conheça as histórias por trás dos nossos projetos:</h2>
             </div>
 
             <div class="artigos-relacionados-container">
 
-                <a href="pages/info_projeto.html">
+                <a href="pages/artigo_projeto.html">
                     <div class="artigo-relacionado-item">
                         <img src="img/sobre_parceria.png" alt="Imagem artigo 1" class="artigo-relacionado-img">
                         <div class="artigo-relacionado-conteudo">
@@ -78,12 +78,14 @@
                             <span>24/10/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 5 minutos de leitura</span>
                             </div>
+                        </div>
+                        <div class="artigo-relacionado-box-button">
                             <button class="artigo-relacionado-link">Ler artigo completo »</button>
                         </div>
                     </div>
                 </a>
 
-                <a href="pages/info_parceria.html">
+                <a href="pages/artigo_parceria.html">
                     <div class="artigo-relacionado-item">
                         <img src="img/sobre_parceria.png" alt="Imagem artigo 2" class="artigo-relacionado-img">
                         <div class="artigo-relacionado-conteudo">
@@ -93,12 +95,14 @@
                             <span>24/10/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 3 minutos de leitura</span>
                             </div>
+                        </div>
+                        <div class="artigo-relacionado-box-button">
                             <button class="artigo-relacionado-link">Ler artigo completo »</button>
                         </div>
                     </div>
                 </a>
 
-                <a href="pages/info_bolsistas.html">
+                <a href="pages/artigo_bolsistas.html">
                     <div class="artigo-relacionado-item">
                         <img src="img/sobre_parceria.png" alt="Imagem artigo 3" class="artigo-relacionado-img">
                         <div class="artigo-relacionado-conteudo">
@@ -108,13 +112,14 @@
                             <span>24/10/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 3 minutos de leitura</span>
                             </div>
+                        </div>
+                        <div class="artigo-relacionado-box-button">
                             <button class="artigo-relacionado-link">Ler artigo completo »</button>
                         </div>
                     </div>
                 </a>
             </div>
         </section>
-
 
         <section class="containers container" id="projeto">
             <div class="background-box">
@@ -145,9 +150,9 @@
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima quibusdam a deleniti, impedit asperiores quos, quod ex mollitia ipsum hic doloremque recusandae doloribus, nesciunt harum provident reiciendis animi non totam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, sapiente consectetur voluptate, libero aliquid autem distinctio aliquam sit, obcaecati nam commodi reprehenderit. Eum laboriosam ratione, aperiam deleniti possimus deserunt doloribus.
                     </p>
                     <div class="box-buttons">
-                        <a href="pages/relatorio.html" class="btn btn3">Relatório</a>
+                        <a href="pages/artigo_relatorio.html" class="btn btn3">Relatório</a>
                         
-                        <a href="https://youtu.be/FYERV1m3R5Q?si=sObyIsx1rlJfUTS2" class="btn btn2">Música <i class="bi bi-play"></i></a>
+                        <a href="https://youtu.be/FYERV1m3R5Q?si=sObyIsx1rlJfUTS2" target="_blank" class="btn btn2">Música <i class="bi bi-play"></i></a>
 
                         <a href="utils/pdfs/apostila_inclusao_digital.pdf" download="apostila_inclusao_digital.pdf" class="btn btn1">Apostila <i class="bi bi-download"></i></a>
                     </div>
