ajuste de textos

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <section class="banner">
             <div class="text-banner">
                 <h1>Projeto <span>Inclusão Digital</span></h1>
-                <p>Aplicabilidade de ferramentas digitas, promovendo a inovação e as habilidades tecnológicas aos usuários da biblioteca do Compaz Miguel Arraes, pelos estudantes da ETEPAC</p>
+                <p>Promovendo inovação e habilidades tecnológicas aos usuários da biblioteca do COMPAZ Miguel Arraes, através de estudantes da ETEPAC</p>
             </div>
             <img src="img/banner_inclusao_digital(1920x1220).png" alt="">
         </section>
 
         <section class="containers artigos-relacionados-section" id="artigos">
             <div class="titulos_containers">
-                <h2>Iniciativa que conecta <span>pessoas, ideias e futuro</span><br> conheça as histórias por trás dos nossos projetos:</h2>
+                <h2>Iniciativa que conecta <span>pessoas, ideias e futuro.</span><br> Conheça as histórias por trás do nosso projeto:</h2>
             </div>
 
             <div class="artigos-relacionados-container">
@@ -90,7 +90,7 @@
                         <img src="img/sobre_parceria.png" alt="Imagem artigo 2" class="artigo-relacionado-img">
                         <div class="artigo-relacionado-conteudo">
                             <span class="artigo-relacionado-tag">Parceria</span>
-                            <h3 class="artigo-relacionado-subtitulo">ETEPAC e COMPAZ: uma união estratégica e eficaz</h3>
+                            <h3 class="artigo-relacionado-subtitulo">ETEPAC e COMPAZ: união estratégica e eficaz</h3>
                             <div class="artigo-relacionado-info">
                             <span>24/10/2025</span>
                             <span><i class="bi bi-stopwatch"></i> 3 minutos de leitura</span>
@@ -169,7 +169,7 @@
                     <h3>Sônia Maria de Pádua</h3>
                     <h4>Professora Integradora</h4>
                     <p>
-                        Bacharela em <span>Biblioteconomia</span> pela Universidade Federal de Pernambuco (UFPE), com especialização em <span>Informação Tecnológica</span> também pela UFPE. <span>Bibliotecária</span> por 31 anos como coordenadora das 10 bibliotecas do SENAI-PE. Professora do Curso Técnico em <span>Biblioteconomia em EAD</span>, na ETEPAC.<br>
+                        Bacharela em <span>Biblioteconomia</span> pela Universidade Federal de Pernambuco (UFPE), com especialização em <span>Informação Tecnológica</span> também pela UFPE. Bibliotecária por 31 anos como coordenadora das 10 bibliotecas do SENAI-PE. Professora do Curso Técnico em <span>Biblioteconomia</span> em EAD, na ETEPAC.<br>
                         Professora <span>Coordenadora</span> desse projeto. Articuladora junto à empresa parceira e redatora. Submeteu o projeto à FACEPE, providenciou o recrutamento dos estudantes à formação, acompanhou a formação, seleção e preparação dos estudantes bolsistas para exercício da prática e demais atividades necessárias para o desenvolvimento do projeto.
                     </p>
 
@@ -185,8 +185,8 @@
                     <h3>Fagner Barbosa Silva Pontes</h3>
                     <h4>Professor Formador</h4>
                     <p>
-                        Graduado em <span>Matemática e em Sistemas de Informação</span> pela Universidade Estácio de Sá. Especializado em <span>Educação e Novas Tecnologias</span>, e <span>Docência na Educação Profissional</span> de Nível Técnico. Professor da ETEPAC do Curso Técnico em <span>Desenvolvimento de Sistemas</span>, atuando principalmente nos seguintes temas: desenvolvimento web, programação e javascript, na modalidade EAD.</br>
-                        <span>Professor voluntário neste projeto</span>, foi responsável por ser o facilitador na formação dos estudantes, orientar os bolsistas na confecção da apostila do curso de curta duração de promoção da inclusão digital para jovens e adultos, e coordenar os bolsistas na prática como facilitadores pelo período do curso promovido na biblioteca do COMPAZ Miguel Arraes.
+                        Graduado em <span>Matemática</span> e em <span>Sistemas de Informação</span> pela Universidade Estácio de Sá. Especializado em <span>Educação e Novas Tecnologias</span>, e <span>Docência na Educação Profissional de Nível Técnico</span>. Professor da ETEPAC do Curso Técnico em <span>Desenvolvimento de Sistemas</span>, atuando principalmente nos seguintes temas: desenvolvimento web, programação e javascript, na modalidade EAD.</br>
+                        Professor <span>Voluntário</span> neste projeto, foi responsável por ser o facilitador na formação dos estudantes, orientar os bolsistas na confecção da apostila do curso de curta duração de promoção da inclusão digital para jovens e adultos, e coordenar os bolsistas na prática como facilitadores pelo período do curso promovido na biblioteca do COMPAZ Miguel Arraes.
                     </p>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/fagner-pontes-63242a257" target="_blank" class="btn-sociais"><i class="bi bi-linkedin"></i></a>
@@ -251,7 +251,7 @@
                         </div>
                     </div>
                     <div class="card-content">
-                        <h3 class="badge5">Tradução e Interpretação de Libras</h3>     
+                        <h3 class="badge5">Tradução e Interpretação de LIBRAS</h3>     
                     </div>
                 </div>
                 <div class="card">
