--- a/pages/artigo_relatorio.html
+++ b/pages/artigo_relatorio.html
@@ -43,54 +43,54 @@
         <div class="artigo-principal-corpo">
             <h2>Encerramento do Projeto</h2>
             <p>
-            O projeto foi concluído com êxito, mantendo a energia positiva que marcou seu início. Durante a execução, <strong>a equipe demonstrou naturalidade, superando as dúvidas e inseguranças iniciais</strong>. A integração e o alto desempenho do grupo refletiram a maturidade, a responsabilidade e o comprometimento de todos para com os objetivos propostos.
+            O projeto foi concluído com êxito, mantendo a energia positiva que marcou seu início. Durante a execução, <strong>a equipe demonstrou resiliência, superando as dúvidas e inseguranças iniciais</strong>. A integração e o alto desempenho do grupo refletiram a maturidade, a responsabilidade e o comprometimento de todos para com os objetivos propostos.
             </p>
 
-            <h2>Resultados Alcançados</h2>
+            <h2>Resultados alcançados</h2>
             <p>
             O projeto atingiu com sucesso os objetivos estabelecidos, destacando-se nos seguintes aspectos:</p>
             <ul class="topicos">
-                <li>Qualidade do trabalho desenvolvido</li>
-                <li>Relevância e consistência do conteúdo oferecido</li>
-                <li>Adequação ao público-alvo definido</li>
+                <li>Qualidade do trabalho desenvolvido;</li>
+                <li>Relevância e consistência do conteúdo oferecido;</li>
+                <li>Adequação ao público-alvo definido.</li>
             </ul>
 
-            <h2>Capacitações Realizadas</h2>
+            <h2>Capacitações realizadas</h2>
             <p>
             Durante o período de execução, foram realizados dois ciclos de treinamento:</p>
             <ul class="topicos">
-                <li>Treinamento dos bolsistas: Ministrado pelo <strong>professor Fagner Pontes</strong>, de 25/08 à 05/09/2025.</li>
-                <li>Treinamento dos alunos do Compaz: Conduzido pelos bolsistas, de 15/09 à 03/10/2025.</li>
-                <li>Adequação ao público-alvo definido</li>
+                <li>Treinamento dos bolsistas: Ministrado pelo professor Fagner Pontes, de <strong>25/08</strong> à <strong>05/09/2025</strong>;</li>
+                <li>Treinamento dos alunos do COMPAZ: Conduzido pelos bolsistas, de <strong>15/09</strong> à <strong>03/10/2025</strong>;</li>
+                <li>Adequação ao público-alvo definido.</li>
             </ul>
             <p>
-            Os treinamentos foram realizados com alto nível de responsabilidade e envolvimento por parte da equipe gestora do projeto, dos  bolsistas, da equipe gestora e alunos do Compaz. 
+            Os treinamentos foram realizados com alto nível de responsabilidade e envolvimento por parte da equipe gestora do projeto, dos  bolsistas e alunos do COMPAZ. 
             </p>
 
-            <h2>Seleção e Participação dos Bolsistas</h2>
+            <h2>Seleção e participação dos bolsistas</h2>
             <p>
-            A seleção de <strong>10 bolsistas entre os alunos da modalidade EAD da ETEPAC</strong> ocorreu após a conclusão do curso online “Inclusão Digital Essencial”, ministrado pelo professor Fagner Pontes. O curso teve a duração de 10 dias e carga horária total de 10 horas. Ocorreu uma desistência entre os bolsistas, durante o desenvolvimento do projeto, resultando na participação efetiva de 9 bolsistas até o encerramento das atividades.
+            A seleção de 10 bolsistas entre os alunos da modalidade EAD da ETEPAC ocorreu após a conclusão do curso online <strong>“Inclusão Digital Essencial”</strong>, ministrado pelo professor Fagner Pontes. O curso teve a duração de 10 dias e carga horária total de 10 horas. Houve uma desistência entre os bolsistas durante o desenvolvimento do projeto, resultando na participação efetiva de <strong>9 bolsistas</strong> até o encerramento das atividades.
             <br><br>
-            A equipe era multidisciplinar, distribuída:
+            A equipe multidisciplinar foi distribuída da seguinte forma:
             </p>
             <img src="../img/sobre_bolsistas.png" style="width: 25rem;" alt="">
 
-            <h2>Extensão do curso de inclusão Digital no COMPAZ</h2>
+            <h2>Extensão do curso de Inclusão Digital no COMPAZ</h2>
             <p>
             Antes de iniciar os treinamentos, foi realizado um conjunto de ações preparatórias no COMPAZ. <strong>A coordenadora do projeto realizou duas visitas técnicas ao local</strong> com os seguintes objetivos:
             </p>
             <ul class="topicos check">
-                <li>Verificar a estrutura física e os equipamentos disponíveis.</li>
-                <li>Dialogar com a responsável pela biblioteca para alinhar estratégias de divulgação do curso.</li>
-                <li>Planejar o processo de inscrição para o curso do projeto, dos frequentadores da biblioteca.</li>
+                <li>Verificar a estrutura física e os equipamentos disponíveis;</li>
+                <li>Dialogar com a responsável pela biblioteca para alinhar estratégias de divulgação do curso;</li>
+                <li>Planejar o processo de inscrição para o curso do projeto.</li>
             </ul>
             <p>
             Essas etapas foram fundamentais para garantir a organização e a efetividade das ações de extensão com foco na qualidade, segurança e geração de impacto efetivo na aplicabilidade no cotidiano do público alvo do COMPAZ e bolsistas. Ao longo do curso, <strong>os bolsistas demonstraram desempenho eficaz e evolução significativa em suas habilidades como instrutores</strong>, considerando:
             </p>
             <ul class="topicos check">
-                <li>Maior Segurança e confiança na condução das aulas.</li>
-                <li>Melhor domínio do conteúdo programático e técnico.</li>
-                <li>A capacidade de realizar ajustes pedagógicos sem necessidade de intervenção direta da coordenação ou do professor responsável.</li>
+                <li>Maior segurança e confiança na condução das aulas;</li>
+                <li>Melhor domínio do conteúdo programático e técnico;</li>
+                <li>Capacidade de realizar ajustes pedagógicos sem necessidade de intervenção direta da coordenação ou do professor responsável.</li>
             </ul> 
         </div>
     </main>
