finalizando artigo relatório

--- a/pages/artigo_relatorio.html
+++ b/pages/artigo_relatorio.html
@@ -59,9 +59,8 @@
             <p>
             Durante o período de execução, foram realizados dois ciclos de treinamento:</p>
             <ul class="topicos">
-                <li>Treinamento dos bolsistas: Ministrado pelo professor Fagner Pontes, de <strong>25/08</strong> à <strong>05/09/2025</strong>;</li>
-                <li>Treinamento dos alunos do COMPAZ: Conduzido pelos bolsistas, de <strong>15/09</strong> à <strong>03/10/2025</strong>;</li>
-                <li>Adequação ao público-alvo definido.</li>
+                <li><strong>Treinamento dos bolsistas</strong>: Ministrado pelo professor Fagner Pontes, de <strong>25/08</strong> à <strong>05/09/2025</strong>;</li>
+                <li><strong>Treinamento dos alunos do COMPAZ</strong>: Conduzido pelos bolsistas, de <strong>15/09</strong> à <strong>03/10/2025</strong>;</li>
             </ul>
             <p>
             Os treinamentos foram realizados com alto nível de responsabilidade e envolvimento por parte da equipe gestora do projeto, dos  bolsistas e alunos do COMPAZ. 
@@ -73,7 +72,124 @@
             <br><br>
             A equipe multidisciplinar foi distribuída da seguinte forma:
             </p>
-            <img src="../img/sobre_bolsistas.png" style="width: 25rem;" alt="">
+
+            <div class="table-container">
+            <table>
+                <thead>
+                <tr>
+                    <th>EQUIPE</th>
+                    <th>FUNÇÃO NO PROJETO</th>
+                    <th>FUNÇÃO NA ETEPAC</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Sônia Maria de Pádua</td>
+                    <td>Coordenadora</td>
+                    <td>Professora de Biblioteconomia</td>
+                </tr>
+                <tr>
+                    <td>Fagner Barbosa Silva Pontes</td>
+                    <td>Professor</td>
+                    <td>Professor de Desenvolvimento de Sistemas</td>
+                </tr>
+                <tr>
+                    <td>Andryene da Mota Rodrigues</td>
+                    <td>Bolsista</td>
+                    <td>Aluna do Técnico em Administração</td>
+                </tr>
+                <tr>
+                    <td>Carlos Henrique Correia dos Santos</td>
+                    <td>Bolsista</td>
+                    <td>Aluno do Técnico em Design Gráfico</td>
+                </tr>
+                <tr>
+                    <td>Glébson Pedro da Silva</td>
+                    <td>Bolsista</td>
+                    <td>Aluno do Técnico em Logística</td>
+                </tr>
+                <tr>
+                    <td>Jaquelyne Alves da Silva</td>
+                    <td>Bolsista</td>
+                    <td>Aluna do Técnico em Tradução e Interpretação de LIBRAS</td>
+                </tr>
+                <tr>
+                    <td>Júlio Rasec Cabral Marques da Silva</td>
+                    <td>Bolsista</td>
+                    <td>Aluno do Técnico em Desenvolvimento de Sistemas</td>
+                </tr>
+                <tr>
+                    <td>Leonardo da Silva Felipe</td>
+                    <td>Bolsista</td>
+                    <td>Aluno do Técnico em Logística</td>
+                </tr>
+                <tr>
+                    <td>Rayane Mireli Silva Gomes</td>
+                    <td>Bolsista</td>
+                    <td>Aluna do Técnico em Desenvolvimento de Sistemas</td>
+                </tr>
+                <tr>
+                    <td>Ruth Pereira da Silva</td>
+                    <td>Bolsista</td>
+                    <td>Aluna do Técnico em Logística</td>
+                </tr>
+                <tr>
+                    <td>Valmir Pereira da Silva</td>
+                    <td>Bolsista</td>
+                    <td>Aluno do Técnico em Desenvolvimento de Sistemas</td>
+                </tr>
+                </tbody>
+            </table>
+            </div>
+           
+            <br>
+            <p>
+            Dos 46 alunos que iniciaram o curso de formação com o professor Fagner Pontes, 27 eram mulheres (58,7%) e 19 eram homens (41,3%), conforme mostra o gráfico abaixo:
+            </p>
+            <img src="../img/grafico_genero_bolsistas.png" alt="Gráfico de pizza sobre bolsistas por curso" class="grafico">
+            <br><br>
+            <p>
+            Os estudantes selecionados como bolsistas são de diversos cursos oferecidos pela ETEPAC, conforme tabela abaixo:
+            </p>
+
+            <div class="table-container">
+            <table>
+                <thead>
+                <tr>
+                    <th>CURSO</th>
+                    <th>QUANTIDADE DE ALUNOS</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Desenvolvimento de Sistemas</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Logística</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Administração</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Design Gráfico</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>Tradução e Interpretação de LIBRAS</td>
+                    <td>1</td>
+                </tr>
+                </tbody>
+            </table>
+            </div>
+
+            <br>
+            <p>
+            Os bolsistas residiam em diferentes cidades de Pernambuco, com maior concentração na Região Metropolitana do Recife:
+            </p>
+            <img src="../img/distribuicao_pe.png" alt="Gráfico de barras sobre bolsistas por cidade">
 
             <h2>Extensão do curso de Inclusão Digital no COMPAZ</h2>
             <p>
@@ -92,6 +208,138 @@
                 <li>Melhor domínio do conteúdo programático e técnico;</li>
                 <li>Capacidade de realizar ajustes pedagógicos sem necessidade de intervenção direta da coordenação ou do professor responsável.</li>
             </ul> 
+
+            <h2>Execução do treinamento de extensão</h2>
+            <p>
+            O treinamento foi realizado no ambiente da biblioteca do COMPAZ, com o apoio da bibliotecária <strong>Ana Cristina de Souza Castro</strong>. Com aulas expositivas e práticas, apresentadas via <strong>Google Slides</strong>, com a colaboração ativa de todos os bolsistas.
+            </p>
+
+            <h4>Metodologia</h4>
+            <ul class ="topicos check">
+                <li>Método expositivo, com atividades práticas aplicadas após cada conteúdo;</li>
+                <li>Dinâmicas de fixação, como jogos digitais e vídeos, utilizadas para estimular a participação dos alunos;</li>
+                <li>Material didático técnico (apostila) elaborado com linguagem acessível e inclusiva.</li>
+            </ul>
+            <p>
+            Sobre a participação dos alunos do COMPAZ, observam-se alguns dados relevantes: dos 21 alunos que concluíram o curso – <strong>3 deles funcionários do próprio COMPAZ</strong> –, 12 eram mulheres (57,1%) e 9 eram homens (42,9%), conforme mostra o gráfico a seguir:
+            </p>
+            <img src="../img/grafico_genero_alunos.png" alt="Gráfico de pizza sobre alunos do COMPAZ por gênero">
+            <br><br>
+            <p>
+            A faixa etária dos participantes variou entre <strong>15 e 78 anos</strong>, abrangendo desde adolescentes até idosos. A frequência média de participação foi de 82,86%, <strong>demonstrando um bom engajamento geral</strong>. O gráfico abaixo ilustra a distribuição entre as faixas etárias, evidenciando a predominância de adolescente e idosos:
+            </p>
+            <img src="../img/grafico_idade.png" alt="Gráfico de barras sobre alunos do COMPAZ por idade">
+
+            <br><br>
+            <h4>Participação e carga horária</h4>
+            <p>
+            Foram formadas 4 turmas, com um total de 21 alunos matriculados. O curso teve duração de 3 semanas, com aulas de 2 horas por dia, totalizando <strong>10 horas semanais e 40 horas de curso completo</strong>, conforme o quadro abaixo.
+            </p>
+
+            <div class="table-container">
+            <table class="curso-tabela">
+                <thead>
+                <tr>
+                    <th colspan="3">CURSO: INCLUSÃO DIGITAL PARA JOVENS E ADULTOS</th>
+                </tr>
+                <tr>
+                    <th>ALUNOS</th>
+                    <th>PERÍODO DO CURSO</th>
+                    <th>CARGA HORÁRIA SEMANAL</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>21 alunos</td>
+                    <td>4 turmas: 15/09 a 03/20/2025</td>
+                    <td>10 horas</td>
+                </tr>
+                <tr class="total-tabela">
+                    <th colspan="4">TOTAL DE HORAS DO CURSO: 40 horas</th>
+                </tr>
+                </tbody>
+            </table>
+            </div>
+
+            <br>
+            <p>
+            A programação do curso no COMPAZ foi encerrada no dia 03/10/2025 e os certificados foram entregues aos alunos no dia 13/10/2025.
+            </p>
+            <p>
+            Com o fim das atividades dos bolsistas como professores, o grupo partiu para a segunda etapa do projeto, que consistiu em elaborar o <strong>Instagram</strong>, o <strong>Website</strong> e um eficiente e bem editado <strong>vídeo do projeto</strong> para apresentação como produto final.
+            Para a saída de produtos de qualidade, os bolsistas compartilharam as tarefas e foram divididos nos seguintes grupos de trabalhos:
+            </p>
+
+            <div class="table-container">
+            <table>
+                <thead>
+                <tr>
+                    <th colspan="3">GRUPOS</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th>REDAÇÃO</th>
+                    <th>INSTAGRAM</th>
+                </tr>
+                <tr>
+                    <td>Ruth Pereira da Silva</td>
+                    <td>Carlos Henrique Correia dos Santos</td>
+                </tr>
+                <tr>
+                    <td>Sônia Maria de Pádua</td>
+                    <td>Jaquelyne Alves da Silva</td>
+                </tr>
+                <tr>
+                    <td>Glébson Pedro da Silva</td>
+                    <td>Valmir Pereira da Silva</td>
+                </tr>
+
+                <tr>
+                    <th>ANÁLISE DE DADOS</th>
+                    <th>ELABORAÇÃO DO SITE</th>
+                </tr>
+                <tr>
+                    <td>Rayane Mireli Silva Gomes</td>
+                    <td>Carlos Henrique Correia dos Santos</td>
+                </tr>
+                <tr>
+                    <th>ELABORAÇÃO DO VÍDEO</th>
+                    <td>Jaquelyne Alves da Silva</td>
+                </tr>
+                <tr>
+                    <td>Andryene de Mota Rodrigues</td>
+                    <td>Júlio Rasec Cabral Marques da Silva</td>
+                </tr>
+
+                <tr>
+                    <th colspan="3">MONITORAMENTO DO CRONOGRAMA</th>
+                </tr>
+                <tr>
+                    <td colspan="3">Leonardo da Silva Felipe</td>
+                </tr>
+                <tr>
+                    <td colspan="3">Sônia Maria de Pádua</td>
+                </tr>
+                </tbody>
+            </table>
+            </div>
+
+            <p>
+            Todo o material foi entregue até o dia 28 de novembro de 2025 para avaliação da FACEPE, durante a apresentação do projeto.
+            </p>
+            <p>
+            O projeto </strong>Aplicabilidade das Ferramentas Digitais</strong> chega ao fim com a certeza de que cumpriu com excelência seus objetivos. Ao longo de sua execução, foi possível observar o impacto positivo da integração das tecnologias digitais nas práticas do dia a dia dos alunos, <strong>promovendo inovação, eficiência e colaboração</strong>.
+            </p>
+            <p>
+            O envolvimento ativo da equipe de bolsistas foi um dos pilares fundamentais para o sucesso da iniciativa. Com <strong>dedicação, criatividade e espírito colaborativo</strong>, os bolsistas contribuíram significativamente para o desenvolvimento das atividades, demonstrando comprometimento e protagonismo em cada etapa do processo. A <strong>orientação e o suporte</strong> constante da coordenadora também foram essenciais, garantindo o alinhamento estratégico, a qualidade metodológica e a articulação entre os diferentes atores envolvidos.
+            </p>
+            <p>
+            Os resultados obtidos refletem não apenas o domínio técnico das ferramentas digitais, mas também a capacidade de trabalho em equipe, resolução de problemas e adaptação às demandas futuras do mercado. O projeto se consolidou como uma experiência enriquecedora, que deixou <strong>marcas duradouras</strong> na formação dos participantes: alunos, bolsistas e equipe de coordenação.
+            </p>
+            <p>
+            Encerramos este ciclo com o sentimento de <strong>gratidão e realização</strong>, certos de que os aprendizados adquiridos continuarão a reverberar em futuras iniciativas. Que este seja apenas o começo de uma trajetória de <strong>inovação e transformação digital</strong> cada vez mais sólida e inspiradora.
+            </p>
         </div>
     </main>
 </body>
