ajuste de tabelas e gráficos

--- a/pages/artigo_relatorio.html
+++ b/pages/artigo_relatorio.html
@@ -146,8 +146,11 @@
             <p>
             Dos 46 alunos que iniciaram o curso de formação com o professor Fagner Pontes, 27 eram mulheres (58,7%) e 19 eram homens (41,3%), conforme mostra o gráfico abaixo:
             </p>
+
+            <div class="grafico">
             <img src="../img/grafico_genero_bolsistas.png" alt="Gráfico de pizza sobre bolsistas por curso" class="grafico">
-            <br><br>
+            </div>
+
             <p>
             Os estudantes selecionados como bolsistas são de diversos cursos oferecidos pela ETEPAC, conforme tabela abaixo:
             </p>
@@ -189,7 +192,10 @@
             <p>
             Os bolsistas residiam em diferentes cidades de Pernambuco, com maior concentração na Região Metropolitana do Recife:
             </p>
+
+            <div class="grafico">
             <img src="../img/distribuicao_pe.png" alt="Gráfico de barras sobre bolsistas por cidade">
+            </div>
 
             <h2>Extensão do curso de Inclusão Digital no COMPAZ</h2>
             <p>
@@ -223,14 +229,19 @@
             <p>
             Sobre a participação dos alunos do COMPAZ, observam-se alguns dados relevantes: dos 21 alunos que concluíram o curso – <strong>3 deles funcionários do próprio COMPAZ</strong> –, 12 eram mulheres (57,1%) e 9 eram homens (42,9%), conforme mostra o gráfico a seguir:
             </p>
+
+            <div class="grafico">
             <img src="../img/grafico_genero_alunos.png" alt="Gráfico de pizza sobre alunos do COMPAZ por gênero">
-            <br><br>
+            </div>
+
             <p>
             A faixa etária dos participantes variou entre <strong>15 e 78 anos</strong>, abrangendo desde adolescentes até idosos. A frequência média de participação foi de 82,86%, <strong>demonstrando um bom engajamento geral</strong>. O gráfico abaixo ilustra a distribuição entre as faixas etárias, evidenciando a predominância de adolescente e idosos:
             </p>
-            <img src="../img/grafico_idade.png" alt="Gráfico de barras sobre alunos do COMPAZ por idade">
 
-            <br><br>
+            <div class="grafico">
+            <img src="../img/grafico_idade.png" alt="Gráfico de barras sobre alunos do COMPAZ por idade">
+            </div>
+            
             <h4>Participação e carga horária</h4>
             <p>
             Foram formadas 4 turmas, com um total de 21 alunos matriculados. O curso teve duração de 3 semanas, com aulas de 2 horas por dia, totalizando <strong>10 horas semanais e 40 horas de curso completo</strong>, conforme o quadro abaixo.
@@ -243,9 +254,9 @@
                     <th colspan="3">CURSO: INCLUSÃO DIGITAL PARA JOVENS E ADULTOS</th>
                 </tr>
                 <tr>
-                    <th>ALUNOS</th>
-                    <th>PERÍODO DO CURSO</th>
-                    <th>CARGA HORÁRIA SEMANAL</th>
+                    <td class="subgroup">ALUNOS</td>
+                    <td class="subgroup">PERÍODO DO CURSO</td>
+                    <td class="subgroup">CARGA HORÁRIA SEMANAL</td>
                 </tr>
                 </thead>
                 <tbody>
@@ -261,7 +272,6 @@
             </table>
             </div>
 
-            <br>
             <p>
             A programação do curso no COMPAZ foi encerrada no dia 03/10/2025 e os certificados foram entregues aos alunos no dia 13/10/2025.
             </p>
@@ -279,8 +289,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <th>REDAÇÃO</th>
-                    <th>INSTAGRAM</th>
+                    <td class="subgroup">REDAÇÃO</td>
+                    <td class="subgroup">INSTAGRAM</td>
                 </tr>
                 <tr>
                     <td>Ruth Pereira da Silva</td>
@@ -296,30 +306,29 @@
                 </tr>
 
                 <tr>
-                    <th>ANÁLISE DE DADOS</th>
-                    <th>ELABORAÇÃO DO SITE</th>
+                    <td class="subgroup">MONITORAMENTO DO CRONOGRAMA</td>
+                    <td class="subgroup">ELABORAÇÃO DO SITE</td>
                 </tr>
                 <tr>
-                    <td>Rayane Mireli Silva Gomes</td>
+                    <td>Leonardo da Silva Felipe</td>
                     <td>Carlos Henrique Correia dos Santos</td>
                 </tr>
                 <tr>
-                    <th>ELABORAÇÃO DO VÍDEO</th>
+                    <td>Sônia Maria de Pádua</td>
                     <td>Jaquelyne Alves da Silva</td>
                 </tr>
                 <tr>
-                    <td>Andryene de Mota Rodrigues</td>
+                    <td></td>
                     <td>Júlio Rasec Cabral Marques da Silva</td>
                 </tr>
 
                 <tr>
-                    <th colspan="3">MONITORAMENTO DO CRONOGRAMA</th>
+                    <td class="subgroup">ELABORAÇÃO DO VÍDEO</td>
+                    <td class="subgroup">ANÁLISE DE DADOS</td>
                 </tr>
                 <tr>
-                    <td colspan="3">Leonardo da Silva Felipe</td>
-                </tr>
-                <tr>
-                    <td colspan="3">Sônia Maria de Pádua</td>
+                    <td>Andryene de Mota Rodrigues</td>
+                    <td>Rayane Mireli Silva Gomes</td>
                 </tr>
                 </tbody>
             </table>
